--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.1.6"
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.18"
   }
 }
