--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "nodetodoapi",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,15 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.18",
     "validator": "^10.8.0"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jon9m/node_mongodb.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jon9m/node_mongodb/issues"
+  },
+  "homepage": "https://github.com/jon9m/node_mongodb#readme",
+  "description": ""
 }
